--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <meta name="theme-color" content="#000000"/>
-    <meta name="description" content="Web site created using create-react-app"/>
+    <meta name="Social Network" content="An application in which you can both communicate with your friends and find new ones"/>
     <meta name="keywords" content="creation of websites to order">
     <meta name="googlebot" content="notranslate"/>
 
@@ -18,16 +18,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Pangolin&display=swap" rel="stylesheet">
 
-
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png"/>
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json"/>
-
-    <title>React App</title>
+    <title>Social Network</title>
 </head>
 
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
 <div id="root"></div>
-
 </body>
 </html>
